Дебаг и доработка
Убраны лишние поля из Event
Поставлены todo